--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import "home.css";
+@import "greenhouse.css";
 
 body, html {
-    min-height: 100%;
     margin: 0;
     padding: 0;
     font-family: "Montserrat", sans-serif;
@@ -11,8 +11,10 @@ body, html {
 }
 
 main{
+    position: relative;
     width: 100%;
-    height: 100%;
+    /*min-height: 100vh;*/
+    padding-top: 45px;
 }
 
 .loginForm__container{
@@ -80,9 +82,18 @@ main{
     }
 }
 
+.container__centered{
+    width: 100%;
+    min-height: calc(100vh - 45px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .container{
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -135,6 +146,7 @@ main{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    z-index: 1000;
 }
 
 .nav__list {
