--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import "home.css";
 @import "greenhouse.css";
+@import "nav.css";
+@import "loginPanel.css";
 
 body, html {
     margin: 0;
@@ -15,71 +17,6 @@ main{
     width: 100%;
     /*min-height: 100vh;*/
     padding-top: 45px;
-}
-
-.loginForm__container{
-    display: flex;
-    width: 500px;
-    flex-direction: column;
-}
-
-.loginForm__container-header{
-    text-align: center;
-    color:black;
-    margin-bottom: 10px;
-    font-size: 30px;
-}
-
-.loginForm__container-label{
-    padding-bottom: 5px;
-    font-size: 16px;
-}
-
-.loginForm__container-input{
-    margin-bottom: 20px;
-    border: none;
-    background: #ededed;
-    padding: 15px;
-    border-radius: 5px;
-    font-size: 16px;
-}
-
-.loginForm__container-info{
-    font-size: 12px;
-}
-
-.loginForm__container-btn{
-    font-size: 18px;
-    margin-top: 10px;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 5px;
-    border: 2px solid transparent;
-    color: #fff;
-    background-color: #008ce3;
-    transition: color .3s, background-color .3s;
-    font-weight: bold;
-
-    &:hover{
-        color: #008ce3;
-        background-color: #fff;
-        border: 2px solid #008ce3;
-    }
-}
-
-.loginForm__question{
-    font-size: 14px;
-}
-
-.loginForm__link{
-    font-size: 16px;
-    transition: color .3s;
-    cursor: pointer;
-    text-decoration: none;
-
-    &:hover{
-        color: #10b981;
-    }
 }
 
 .container__centered{
@@ -105,8 +42,21 @@ main{
 }
 
 .container__button-btn{
-    height: 50px;
-    width: 120px;
+    cursor: pointer;
+    padding: 20px;
+    border-radius: 10px;
+    color: #008ce3;
+    background-color: #fff;
+    border: 1px solid #008ce3;
+    transition: color .3s, background-color .3s;
+    font-weight: bold;
+    font-size: 18px;
+
+    &:hover{
+        border: 1px solid transparent;
+        color: #fff;
+        background-color: #008ce3;
+    }
 }
 
 .subcontainer{
@@ -134,81 +84,4 @@ main{
 
 .subcontainer__row-value{
 
-}
-
-.nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: #fff;
-    padding: 10px 0;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    z-index: 1000;
-}
-
-.nav__list {
-    list-style: none;
-    display: flex;
-    gap: 2rem;
-    margin: 0;
-    padding: 0;
-}
-
-.nav__list-logo{
-    display: flex;
-    align-items: center;
-    font-weight: bold;
-    font-size: 18px;
-
-    &::after{
-        content: '';
-        position: relative;
-        width: 2px;
-        background-color: #000;
-        height: 25px;
-        right: -15px;
-    }
-}
-
-.nav__list-item{
-    display: flex;
-    align-items: center;
-}
-
-.nav__list-link {
-    color: #000;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    font-size: 16px;
-    transition: color 0.2s;
-}
-
-.nav__list-link:hover {
-    color: #10b981;
-}
-
-.nav__list svg {
-    width: 20px;
-    height: 20px;
-    margin-right: 0.5rem;
-    stroke: currentColor;
-    fill: none;
-    stroke-width: 2;
-}
-
-.nav__list-logoutBtn{
-    background: none;
-    border: none;
-    color: inherit;
-    cursor: pointer;
-    font-weight: 500;
-    font-size: 1rem;
-    display: flex;
-    align-items: center;
-    padding: 0;
 }
