Skonczylem issue dotyczacy tworzenia raportow i strony wyswietlajacej je

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
 @import "greenhouse.css";
 @import "nav.css";
 @import "loginPanel.css";
+@import "reports.css";
 
 body, html {
     margin: 0;
@@ -57,6 +58,10 @@ main{
         color: #fff;
         background-color: #008ce3;
     }
+}
+
+.container__link{
+    text-decoration: none;
 }
 
 .subcontainer{
