--- a/public/css/home.css
+++ b/public/css/home.css
@@ -113,6 +113,7 @@
 .tasks__container-row{
     display: flex;
     margin-bottom: 25px;
+    align-items: center;
 }
 
 .tasks__container-row-icon{
@@ -152,5 +153,29 @@
 
 .tasks__container-row-deadline-value{
 
+}
+
+.tasks__container-row-menu{
+    form{
+        margin-bottom: 0;
+    }
+
+    button {
+        font-size: 14px;
+        cursor: pointer;
+        padding: 7px;
+        border-radius: 5px;
+        border: 1px solid transparent;
+        color: #fff;
+        background-color: #555555;
+        transition: color .3s, background-color .3s;
+        margin-left: 15px;
+
+        &:hover{
+            color: #555555;
+            background-color: #fff;
+            border: 1px solid #555555;
+        }
+    }
 }
 
