--- a/public/css/todo.css
+++ b/public/css/todo.css
@@ -27,8 +27,10 @@
 }
 
 .todo__container{
-    min-width: 500px;
+    min-width: 600px;
     margin-top: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 .todo__container-box{
