--- a/public/css/home.css
+++ b/public/css/home.css
@@ -159,23 +159,23 @@
     form{
         margin-bottom: 0;
     }
+}
 
-    button {
-        font-size: 14px;
-        cursor: pointer;
-        padding: 7px;
-        border-radius: 5px;
-        border: 1px solid transparent;
-        color: #fff;
-        background-color: #555555;
-        transition: color .3s, background-color .3s;
-        margin-left: 15px;
+.grayBtn{
+    font-size: 14px;
+    cursor: pointer;
+    padding: 7px;
+    border-radius: 5px;
+    border: 1px solid transparent;
+    color: #fff;
+    background-color: #555555;
+    transition: color .3s, background-color .3s;
+    margin-left: 15px;
 
-        &:hover{
-            color: #555555;
-            background-color: #fff;
-            border: 1px solid #555555;
-        }
+    &:hover{
+        color: #555555;
+        background-color: #fff;
+        border: 1px solid #555555;
     }
 }
 
