--- a/public/css/home.css
+++ b/public/css/home.css
@@ -27,9 +27,10 @@
 
 .overview__container{
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-between;
     gap: 15px;
+    height: 100%;
 }
 
 .overview__container-field{
@@ -43,19 +44,38 @@
 
 .overview__container-field-title{
     font-weight: 500;
-    font-size: 16px;
+    font-size: 20px;
     margin-bottom: 5px;
 }
 
 .overview__container-field-value{
-    font-size: 26px;
-    font-weight: bold;
+    font-size: 16px;
     margin-bottom: 5px;
 }
 
-.overview__container-field-diff{
-    font-size: 16px;
-    color: green;
+.overview__container-field-subcontainer{
+    display: flex;
+}
+
+.overview__container-field-subcontainer-box{
+    display: flex;
+    flex-direction: column;
+}
+
+.overview__container-field-subcontainer-box-title{
+
+}
+
+.overview__container-field-subcontainer-box-red{
+
+}
+
+.overview__container-field-subcontainer-box-yellow{
+
+}
+
+.overview__container-field-subcontainer-box-green{
+
 }
 
 .sections{
